project2/sample-https-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: https-app
  labels:
    app: https-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: https-app
  template:
    metadata:
      labels:
        app: https-app
    spec:
      containers:
      - name: https-app
        image: wildajax/my_personal:latest
        ports:
        - containerPort: 443
        volumeMounts:
        - name: ssl-certs
          mountPath: /usr/src/app/ssl
      imagePullSecrets:
        - name: regcred
      volumes:
      - name: ssl-certs
        secret:
          secretName: https-app-secret
---
apiVersion: v1
kind: Service
metadata:
  name: https-app-service
spec:
  selector:
    app: https-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8443
    nodePort: 30001
  type: NodePort
---
apiVersion: v1
kind: Secret
metadata:
  name: https-app-secret
type: Opaque
data:
  server.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tDQpNSUlGQ1RDQ0F2R2dBd0lCQWdJVVNHdyszUGFYdTRpcTRqWkdrR0ptT05UTU42NHdEUVlKS29aSWh2Y05BUUVMDQpCUUF3RkRFU01CQUdBMVVFQXd3SmJHOWpZV3hvYjNOME1CNFhEVEkwTVRJeU1URTRNalF5T1ZvWERUSTFNVEl5DQpNVEU0TWpReU9Wb3dGREVTTUJBR0ExVUVBd3dKYkc5allXeG9iM04wTUlJQ0lqQU5CZ2txaGtpRzl3MEJBUUVGDQpBQU9DQWc4QU1JSUNDZ0tDQWdFQTFnczlYVlRPYnI4dklmOElpY1huam9ZV2xoLzUrQTZrM3lLWmlkZm5ZeDNrDQpzVmh2NTRkZGVVdlJ1SXNPZXR3TVk4TUFlbTBRRk13MkE3a3hIUmtPT2NCQ3N4L3d6Z0lxTzg5djdSbHBOY0dvDQpXa3dQNX [...]
  server.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tDQpNSUlKUWdJQkFEQU5CZ2txaGtpRzl3MEJBUUVGQUFTQ0NTd3dnZ2tvQWdFQUFvSUNBUURXQ3oxZFZNNXV2eThoDQovd2lKeGVlT2hoYVdIL240RHFUZklwbUoxK2RqSGVTeFdHL25oMTE1UzlHNGl3NTYzQXhqd3dCNmJSQVV6RFlEDQp1VEVkR1E0NXdFS3pIL0RPQWlvN3oyL3RHV2sxd2FoYVRBL25BeWNWcTQ0K0lNSSt0RlZNcWx3azI1R2xaSG5ODQo5azZieFhLMFZlbStlVmhQUmo2WDVPZVNyL3ZHTE1OQ1hmSFFTQzdscW9ENTZUTWpYYnpPeTdnRVZvcm0wYS92DQpuTXFQakQzRHdueWFYNXFWTFBXLzBnR21kVXRZR1VUOFcxOEdKdTFpd3dXbDZCT0ZqV0tGRFEvVitsazN0QitmDQpEY0d1a3 [...]
